[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Board.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Post.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/post_small.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
post_scene = ExtResource( 2 )

[node name="Board" type="Node2D" parent="."]

[node name="BoardRequest" type="HTTPRequest" parent="Board"]

[node name="BackButton" type="Button" parent="Board"]
margin_left = 72.8532
margin_top = 567.074
margin_right = 149.853
margin_bottom = 605.074
text = "Back"

[node name="NewPost" type="Button" parent="Board"]
margin_left = 193.0
margin_top = 566.0
margin_right = 271.0
margin_bottom = 605.0
text = "New Post"

[node name="TextureButton1" type="TextureButton" parent="Board"]
visible = false
margin_left = 85.9958
margin_top = 22.267
margin_right = 146.996
margin_bottom = 102.267
disabled = true
texture_normal = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="Board"]
visible = false
margin_left = 223.439
margin_top = 24.6914
margin_right = 284.439
margin_bottom = 104.691
disabled = true
texture_normal = ExtResource( 3 )

[node name="TextureButton3" type="TextureButton" parent="Board"]
visible = false
margin_left = 51.5355
margin_top = 147.435
margin_right = 112.535
margin_bottom = 227.435
disabled = true
texture_normal = ExtResource( 3 )

[node name="TextureButton4" type="TextureButton" parent="Board"]
visible = false
margin_left = 192.393
margin_top = 148.406
margin_right = 253.393
margin_bottom = 228.406
disabled = true
texture_normal = ExtResource( 3 )

[node name="TextureButton5" type="TextureButton" parent="Board"]
visible = false
margin_left = 93.2622
margin_top = 278.261
margin_right = 154.262
margin_bottom = 358.261
disabled = true
texture_normal = ExtResource( 3 )

[node name="TextureButton6" type="TextureButton" parent="Board"]
visible = false
margin_left = 254.674
margin_top = 266.747
margin_right = 315.674
margin_bottom = 346.747
disabled = true
texture_normal = ExtResource( 3 )

[node name="TextureButton7" type="TextureButton" parent="Board"]
visible = false
margin_left = 66.0344
margin_top = 423.848
margin_right = 127.034
margin_bottom = 503.848
disabled = true
texture_normal = ExtResource( 3 )

[node name="TextureButton8" type="TextureButton" parent="Board"]
visible = false
margin_left = 192.107
margin_top = 393.649
margin_right = 253.107
margin_bottom = 473.649
disabled = true
texture_normal = ExtResource( 3 )
[connection signal="visibility_changed" from="Board" to="." method="_on_Board_visibility_changed"]
[connection signal="request_completed" from="Board/BoardRequest" to="." method="_on_BoardRequest_request_completed"]
[connection signal="button_up" from="Board/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="Board/NewPost" to="." method="_on_NewPost_button_up"]
[connection signal="button_up" from="Board/TextureButton1" to="." method="_on_TextureButton_button_up" binds= [ 0 ]]
[connection signal="button_up" from="Board/TextureButton2" to="." method="_on_TextureButton_button_up" binds= [ 1 ]]
[connection signal="button_up" from="Board/TextureButton3" to="." method="_on_TextureButton_button_up" binds= [ 2 ]]
[connection signal="button_up" from="Board/TextureButton4" to="." method="_on_TextureButton_button_up" binds= [ 3 ]]
[connection signal="button_up" from="Board/TextureButton5" to="." method="_on_TextureButton_button_up" binds= [ 4 ]]
[connection signal="button_up" from="Board/TextureButton6" to="." method="_on_TextureButton_button_up" binds= [ 5 ]]
[connection signal="button_up" from="Board/TextureButton7" to="." method="_on_TextureButton_button_up" binds= [ 6 ]]
[connection signal="button_up" from="Board/TextureButton8" to="." method="_on_TextureButton_button_up" binds= [ 7 ]]
